--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><%= link_to 'Home', root_path %></li>
             <li><a href="#about">About</a></li>
             <li><a href="#about">Serach</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#contact">Edit</a></li>
+            <li><%= link_to 'Edit', bands_path %></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
