--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -6,6 +6,15 @@
 </p>
 
 <p>
+  <strong>Music:</strong>
+  <% if @band.music? %>
+    <div class="music">
+      <%= audio_tag @band.music.url , controls: true %>
+    </div>
+  <% end %>
+</p>
+
+<p>
   <strong>Image:</strong>
   <% if @band.image? %>
     <div class="thumbnail">
