--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Member:</strong>
+  <%= @band.member %>
+</p>
+
+<p>
   <strong>Music:</strong>
   <% if @band.music? %>
     <div class="music">
