--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -24,6 +24,7 @@
           <% end %>
         </td>
         <td><%= band.description %></td>
+        <td><%= render 'bands/tag_list', tag_list: band.genre_list %></td>
         <td><%= link_to 'Show', band %></td>
         <td><%= link_to 'Edit', edit_band_path(band) %></td>
         <td><%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %></td>
