--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,9 @@
               <%= image_tag band.image.url %>
             </p>
           <% end %>
+          <% if band.genre_list.present? %>
+            <%= render 'bands/tag_list', tag_list: band.genre_list %>
+          <% end %>
           <p><%= band.description %></p>
           <p><%= link_to '詳細', band_path(band), { :class => "btn btn-default" } %></p>
         </div><!--/.col-xs-6.col-lg-4-->
