検索画面(未実装)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><%= link_to 'Home', root_path %></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#about">Serach</a></li>
+            <li><%= link_to 'Search', search_path %></li>
             <li><a href="#contact">Contact</a></li>
             <li><%= link_to 'Edit', bands_path %></li>
           </ul>
