開発系ツールの導入と活動都府県を登録できる

--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -66,6 +66,7 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+  <%= f.collection_select :prefecture, JpPrefecture::Prefecture.all, :name, :name %>
   <div class="actions">
     <%= f.submit %>
   </div>
