バンド一覧・詳細でprefectureを表示

--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -40,5 +40,10 @@
   <%= @band.description %>
 </p>
 
+<p>
+  <strong>Prefecture:</strong>
+    <%= @band.prefecture %>
+</p>
+
 <%= link_to 'Edit', edit_band_path(@band) %> |
 <%= link_to 'Back', bands_path %>
