--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -8,6 +8,8 @@
       <th>Name</th>
       <th>Image</th>
       <th>Description</th>
+      <th>Genle</th>
+      <th>Prefecture</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,6 +27,7 @@
         </td>
         <td><%= band.description %></td>
         <td><%= render 'bands/tag_list', tag_list: band.genre_list %></td>
+        <td><%= band.prefecture %></td>
         <td><%= link_to 'Show', band %></td>
         <td><%= link_to 'Edit', edit_band_path(band) %></td>
         <td><%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %></td>
