--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Bands</h1>
+<h1>登録しているバンド</h1>
 
-<table>
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Image</th>
-      <th>Description</th>
-      <th>Genle</th>
-      <th>Prefecture</th>
+      <th>バンド名</th>
+      <th>サムネイル</th>
+      <th>説明</th>
+      <th>ジャンル</th>
+      <th>活動地域</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,9 +28,9 @@
         <td><%= band.description %></td>
         <td><%= render 'bands/tag_list', tag_list: band.genre_list %></td>
         <td><%= band.prefecture %></td>
-        <td><%= link_to 'Show', band %></td>
-        <td><%= link_to 'Edit', edit_band_path(band) %></td>
-        <td><%= link_to 'Destroy', band, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', band, class: "btn btn-default" %></td>
+        <td><%= link_to 'Edit', edit_band_path(band),  class: "btn btn-default" %></td>
+        <td><%= link_to 'Destroy', band, class: "btn btn-default",  method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
