--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,18 +10,22 @@
     </div>
     <div class="row">
       <% @bands.each do |band| %>
-        <div class="col-xs-6 col-lg-4">
-          <h2><%= band.name %></h2>
-          <% if band.image? %>
-            <p class="thumbnail">
-              <%= image_tag band.image.url %>
-            </p>
-          <% end %>
-          <% if band.genre_list.present? %>
-            <%= render 'bands/tag_list', tag_list: band.genre_list %>
-          <% end %>
-          <p><%= band.description %></p>
-          <p><%= link_to '詳細', band_path(band), { :class => "btn btn-default" } %></p>
+        <div class="col-xs-6 col-lg-3">
+          <div class="band-card">
+            <h3><%= band.name %></h3>
+            <% if band.image? %>
+              <p class="thumbnail">
+                <%= image_tag band.image.url %>
+              </p>
+            <% end %>
+            <% if band.genre_list.present? %>
+              <%= render 'bands/tag_list', tag_list: band.genre_list %>
+            <% end %>
+            <p><%= band.prefecture %></p>
+            <p><%= band.start_year %>〜<%= band.end_year %></p>
+            <p><%= band.description %></p>
+            <p><%= link_to '詳細', band_path(band), { :class => "btn btn-default" } %></p>
+          </div>
         </div><!--/.col-xs-6.col-lg-4-->
       <% end %>
     </div><!--/row-->
