個々のバンドはユーザが管理することとする

--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>登録しているバンド</h1>
+<h1><%= current_user.name %>が管理しているバンド</h1>
 
 <table class="table table-striped table-bordered">
   <thead>
