--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -5,28 +5,5 @@ search
 
 <% if @bands.present? %>
   <hr>
-  <div class="row">
-    <% @bands.each do |band| %>
-      <div class="col-xs-6 col-lg-3">
-        <div class="band-card">
-          <h3><%= band.name %></h3>
-          <% if band.image? %>
-            <p class="thumbnail">
-              <%= image_tag band.image.url %>
-            </p>
-          <% end %>
-          <div class="
-detail-area">
-            <% if band.genre_list.present? %>
-              <p><b>ジャンル：</b><%= render 'bands/tag_list', tag_list: band.genre_list %></p>
-            <% end %>
-            <p><b>活動地域：</b><%= band.prefecture %></p>
-            <p><b>活動期間：</b><%= band.start_year %>〜<%= band.end_year %></p>
-            <p><%= band.description %></p>
-          </div>
-          <p><%= link_to '詳細', band_path(band), { :class => "btn btn-default btn-block" } %></p>
-        </div>
-      </div><!--/.col-xs-6.col-lg-4-->
-    <% end %>
-  </div><!--/row-->
+  <%= render partial: 'layouts/bands', locals: { bands: @bands } %>
 <% end %>
