--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,38 +10,7 @@
 <body>
     <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Band is Not Dead</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><%= link_to 'トップ', root_path %></li>
-            <li><%= link_to 'バンド検索', search_path %></li>
-            <% if user_signed_in? %>
-              <li><%= link_to 'バンド登録', bands_path %></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= current_user.name %> <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", edit_user_registration_path %></li>
-                <li><%= link_to "Settings", '#' %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Log out", destroy_user_session_path, method: "delete" %>
-                </li>
-              </ul>
-            <% else %>
-              <li><%= link_to 'ログイン', new_user_session_path %></li>
-            <% end %>
-          </ul>
-        </div><!-- /.nav-collapse -->
+      <%= render 'layouts/header' %>
       </div><!-- /.container -->
     </nav><!-- /.navbar -->
   <div class="container">
