--- a/app/views/bands/edit.html.erb
+++ b/app/views/bands/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Band</h1>
+<div class="form-container">
+  <h1>バンド編集</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @band %> |
-<%= link_to 'Back', bands_path %>
+  <%= link_to 'Show', @band %> |
+  <%= link_to 'Back', bands_path %>
+</div>
