--- a/app/views/bands/_form.html.erb
+++ b/app/views/bands/_form.html.erb
@@ -1,79 +1,77 @@
-<%= form_for(@band, :html => { :multipart => true }) do |f| %>
-  <% if @band.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@band.errors.count, "error") %> prohibited this band from being saved:</h2>
+<div class="form-area">
+  <%= form_for(@band, :html => { :multipart => true }) do |f| %>
+    <% if @band.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@band.errors.count, "error") %> prohibited this band from being saved:</h2>
 
-      <ul>
-      <% @band.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <ul>
+        <% @band.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label 'バンド名' %><span class="required"></span><br>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="field">
+      <%= f.label 'メンバー' %><span class="required"></span><br>
+      <%= f.text_area :member, class: "form-control", placeholder: "ボーカル: たくみ\nギター: ゆうすけ\nドラム: まさる" %>
+    </div>
+    <div class="field">
+      <%= f.label "メイン画像" %><span class="option"></span><br>
+      <%= f.file_field :image, class: ".form-control-file"  %>
+      <% if @band.image? %>
+        <%= image_tag @band.image.url %>
+      <% end %><br>
+      <%= f.hidden_field :image_cache %>
+    </div>
+    <div class="field">
+      <!-- 既存レコード(DBに保存されている)かつ、画像が存在する場合 -->
+      <% if @band.persisted? && @band.image? %>
+        <label>
+          <%= f.check_box :remove_image %>
+          画像を削除
+        </label>
       <% end %>
+    </div>
+    <%= f.fields_for :images do |p| %>
+      <% if @images[0].present? && @images[0].persisted? && @images[0].attachment? %>
+        <div class="field">
+          <%= p.label '画像2' %><span class="option"></span><br>
+          <%= p.file_field :attachment%>
+          <%= image_tag @images[0].attachment.url %>
+       </div>
+      <% end %>
+    <% end %>
+    <div class="field">
+      <% if @band.music? %>
+        <div class="music">
+          <%= audio_tag @band.music.url , controls: true %>
+        </div>
+      <% end %>
+      <%= f.label :music %><span class="option"></span><br>
+      <%= f.file_field :music %>
+    </div>
+    <div class="field">
+      <label>活動年</label>
+      <%= f.select :start_year, (Time.zone.now.year - 20)..(Time.zone.now.year) %>年頃から
+      〜
+      <%= f.select :end_year, (Time.zone.now.year - 20)..(Time.zone.now.year) %>年頃まで
+    </div>
+    <div class="field">
+      <ul id="genre-tags">
       </ul>
     </div>
+    <div class="field">
+      <%= f.label :description %><br>
+      <%= f.text_area :description %>
+    </div>
+    <%= f.collection_select :prefecture, JpPrefecture::Prefecture.all, :name, :name %>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label 'バンド名' %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label 'メンバー' %><br>
-    <%= f.text_area :member, placeholder: "ボーカル: たくみ\nギター: ゆうすけ\nドラム: まさる" %>
-  </div>
-  <div class="field">
-    <% if @band.image? %>
-      <div class="thumbnail">
-        <%= image_tag @band.image.url %>
-      </div>
-    <% end %><br>
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
-    <%= f.hidden_field :image_cache %>
-  </div>
-  <div class="field">
-    <!-- 既存レコード(DBに保存されている)かつ、画像が存在する場合 -->
-    <% if @band.persisted? && @band.image? %>
-      <label>
-        <%= f.check_box :remove_image %>
-        画像を削除
-      </label>
-    <% end %>
-  </div>
-  <%= f.fields_for :images do |p| %>
-    <% if @images[0].present? && @images[0].persisted? && @images[0].attachment? %>
-      <div class="field">
-        <div class="thumbnail">
-          <%= image_tag @images[0].attachment.url %>
-        </div>
-        <%= p.label '画像2' %><br>
-        <%= p.file_field :attachment%>
-     </div>
-    <% end %>
-  <% end %>
-  <div class="field">
-    <% if @band.music? %>
-      <div class="music">
-        <%= audio_tag @band.music.url , controls: true %>
-      </div>
-    <% end %>
-    <%= f.label :music %><br>
-    <%= f.file_field :music %>
-  </div>
-  <div class="field">
-    <label>活動年</label>
-    <%= f.select :start_year, (Time.zone.now.year - 20)..(Time.zone.now.year) %>年頃から
-    〜
-    <%= f.select :end_year, (Time.zone.now.year - 20)..(Time.zone.now.year) %>年頃まで
-  </div>
-  <div class="field">
-    <ul id="genre-tags">
-    </ul>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <%= f.collection_select :prefecture, JpPrefecture::Prefecture.all, :name, :name %>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
